name:                fft-sample
version:             0.1.0.0
synopsis:            fft sample
description:         fft sample
license:             MIT
license-file:        LICENSE
author:              IMOKURI
maintainer:          nenegi.01mo@gmail.com
copyright:           2015, IMOKURI
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable fft-sample
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                     , fft
                     , carray
                     , storable-complex
                     , random
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
