name:                fft-sample
version:             0.1.0.0
synopsis:            fft sample
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              IMOKURI
maintainer:          nenegi.01mo@gmail.com
copyright:           2015, IMOKURI
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:IMOKURI/fast-fourier-transform-example.git

executable fft-sample
  main-is:             Main.hs
  other-modules:       Functions
  -- other-extensions:    
  build-depends:       base >=4.6 && <5
                     , fft
                     , carray
                     , storable-complex
                     , random
                     , lens
                     , colour
                     , data-default-class
                     , Chart
                     , Chart-cairo
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
